syntax = "proto3";

package shaperunner;

service ShapeRunner {
  rpc Run (RunRequest) returns (RunResponse);
}

message RunRequest {
  string shape_id = 1;
  bytes input = 2;
}

message RunResponse {
  bytes output = 1;
  bool ok = 2;
  string error = 3;
}
